k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: serviceradar-developer
  labels:
    istio-injection: "disabled"
